Fixed Navbar of Admin Order page

--- a/admin/orders/Orderslist.html
+++ b/admin/orders/Orderslist.html
@@ -8,13 +8,21 @@
       type="image/x-icon"
       href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <base href="/" />
-    <title>VougeCart - Admin Order page</title>
+    <title>VougeCart - Orders Page</title>
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/css/font.module.css" />
     <link
       rel="stylesheet"
-      href="B42_WEB_003_Web-Wizards/admin/orders/css/OrdersManage.css"
+      href="B42_WEB_003_Web-Wizards/admin/css/admin.navbar.module.css"
     />
-    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/css/font.module.css" />
+    <link
+      rel="stylesheet"
+      href="/B42_WEB_003_Web-Wizards/admin/orders/css/OrdersManage.css"
+    />
     <!-- Boxicons CDN Link -->
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
@@ -23,70 +31,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div class="sidebar">
+    <header class="sidebar">
       <div class="logo-details">
-        <i class="VOUGECART.png"></i>
-
         <img
           src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
           alt="Dashboard Logo"
-          style="width: 50px; height: auto"
         />
         <p style="color: white">VOUGECART</p>
       </div>
       <ul class="nav-links">
         <li>
-          <a
-            href="B42_WEB_003_Web-Wizards/admin/dashboard/dashboard.html"
-            class="active"
-          >
-            <i class="bx bx-grid-alt"></i>
+          <a href="B42_WEB_003_Web-Wizards/admin/dashboard/dashboard.html">
+            <i class="ri-dashboard-fill"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="bx bx-box"></i>
-            <span class="links_name">Products</span>
+          <a href="B42_WEB_003_Web-Wizards/admin/products/products.html">
+            <i class="ri-archive-line"></i>
+            <span class="links_name">Product</span>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="bx bx-list-ul"></i>
-            <span class="links_name">Orders</span>
+          <a
+            href="B42_WEB_003_Web-Wizards/admin/orders/Orderslist.html"
+            class="active"
+          >
+            <i class="ri-list-unordered"></i>
+            <span class="links_name">Order list</span>
           </a>
         </li>
-
         <li>
-          <a href="#">
-            <i class="bx bx-cog"></i>
+          <a href="B42_WEB_003_Web-Wizards/admin/profile/profile.html">
+            <i class="ri-user-3-line"></i>
             <span class="links_name">Profile</span>
           </a>
         </li>
-        <li class="log_out">
-          <a href="#">
-            <i class="bx bx-log-out"></i>
+        <li id="log_out">
+          <a href="B42_WEB_003_Web-Wizards/admin/auth/Adminlogin.html">
+            <i class="ri-logout-circle-line"></i>
             <span class="links_name">Log out</span>
           </a>
         </li>
       </ul>
-    </div>
+    </header>
     <section class="home-section">
       <nav>
         <div class="sidebar-button">
-          <i class="bx bx-menu sidebarBtn"></i>
-          <span class="dashboard">Orders</span>
-        </div>
-        <div class="search-box">
-          <input type="text" placeholder="Search..." />
-          <i class="bx bx-search"></i>
+          <i class="ri-menu-fill sidebarBtn"></i>
+          <span class="dashboard">Dashboard</span>
         </div>
         <div class="profile-details">
           <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPq_GdHrAfGdnr3cLDeagSc7X_twjR_6Cz9Q&s"
-            alt=""
+            src="https://imgs.search.brave.com/J5-KJNoclGIgO9mgbMuULm8xw_ri-hvqZYOyhc50Q64/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAyLzE3LzM0LzY3/LzM2MF9GXzIxNzM0/Njc4Ml83WHBDVHQ4/YkxOSnF2VkFhRFpK/d3Zaam0wZXBRbWo2/ai5qcGc"
+            alt="Admin"
           />
-          <span class="admin_name">Maxwell </span>
+          <span id="admin_name"></span>
           <i class="bx bx-chevron-down"></i>
         </div>
       </nav>
@@ -190,9 +190,10 @@
       </div>
     </section>
 
+    <script src="B42_WEB_003_Web-Wizards/admin/js/admin.navbar.js"></script>
     <script>
-      let sidebar = document.querySelector(".sidebar");
-      let sidebarBtn = document.querySelector(".sidebarBtn");
+      sidebar = document.querySelector(".sidebar");
+      sidebarBtn = document.querySelector(".sidebarBtn");
       sidebarBtn.onclick = function () {
         sidebar.classList.toggle("active");
         if (sidebar.classList.contains("active")) {
@@ -203,13 +204,13 @@
       document.addEventListener("DOMContentLoaded", () => {
         fetchOrders();
         document
-          .querySelector(".search-box input")
+          .querySelector(".search-bar input")
           .addEventListener("input", filterOrders);
       });
       document.addEventListener("DOMContentLoaded", () => {
         fetchOrders();
         document
-          .querySelector(".search-box input")
+          .querySelector(".search-bar input")
           .addEventListener("input", filterOrders);
         document
           .querySelector("#secondsearch")
@@ -342,7 +343,8 @@
             description,
           })
         );
-        window.location.href = "B42_WEB_003_Web-Wizards/admin/orders/orderdetail.html";
+        window.location.href =
+          "B42_WEB_003_Web-Wizards/admin/orders/orderdetail.html";
       }
 
       function viewDetail(orderId) {
