--- a/users/auth/UserRegister.html
+++ b/users/auth/UserRegister.html
@@ -23,6 +23,9 @@
   </head>
 
   <body>
+    <a href="B42_WEB_003_Web-Wizards/index.html"
+      ><p class="homepage">&LeftArrow; Back to homepage</p></a
+    >
     <div class="container">
       <!-- Left Side: Image Section -->
       <div class="image-container">
