--- a/users/cartAndpayment/cartAndPayment.html
+++ b/users/cartAndpayment/cartAndPayment.html
@@ -97,10 +97,38 @@
           <i class="ri-shopping-cart-line"></i>
           <i class="ri-notification-line"></i>
           <div class="hr"></div>
-          <div class="user">
-            <i class="ri-user-3-line"></i>
+
+          <div id="user_btn">
+            <div class="user">
+              <i class="ri-user-3-line"></i>
+            </div>
+            <i class="ri-arrow-down-s-fill"></i>
+
+            <div id="user_dropdown_sec">
+              <a href="B42_WEB_003_Web-Wizards/users/orders/orders.html">
+                <i class="ri-shopping-bag-4-line"></i>
+                <span>Orders</span>
+              </a>
+              <hr />
+              <div id="logout_btn">
+                <i class="ri-logout-circle-line"></i>
+                <span>Log out</span>
+              </div>
+            </div>
           </div>
-          <i class="ri-arrow-down-s-fill"></i>
+
+          <div id="auth_btns">
+            <button
+              onclick="window.location.href='B42_WEB_003_Web-Wizards/users/auth/userlogin.html'"
+            >
+              Login
+            </button>
+            <button
+              onclick="window.location.href='B42_WEB_003_Web-Wizards/users/auth/UserRegister.html'"
+            >
+              Sign up
+            </button>
+          </div>
         </div>
       </nav>
     </header>
@@ -245,6 +273,11 @@
             <li class="nav-links">About</li>
             <li class="nav-links">Careers</li>
             <li class="nav-links">Partners</li>
+            <li class="nav-links">
+              <a href="/B42_WEB_003_Web-Wizards/admin/auth/Adminlogin.html"
+                >Join as a partner</a
+              >
+            </li>
           </ul>
           <ul>
             <li class="footer-link-headings">HELP</li>
@@ -263,7 +296,7 @@
       </div>
       <hr />
       <div class="copyright">
-        <p>&copy; 2025 VagueCart Inc. All rights reserved.</p>
+        <p>&copy; 2025 VogueCart Inc. All rights reserved.</p>
         <div class="footer-socials">
           <a href="#"><i class="ri-facebook-circle-fill"></i></a>
           <a href="#"><i class="ri-twitter-fill"></i></a>
