Fixed Admin Profile page and transistions in sidebar

--- a/admin/profile/profile.html
+++ b/admin/profile/profile.html
@@ -6,12 +6,13 @@
     <title>Admin Profile</title>
     <link rel="icon" type="image/x-icon" href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"/>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="/B42_WEB_003_Web-Wizards/css/footer.module.css"/>
     <base href="/" />
     <title>VougeCart - Admin Profile</title>
     <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/css/font.module.css" />
     <link rel="stylesheet"  href="/B42_WEB_003_Web-Wizards/admin/css/admin.navbar.module.css"/>
+    <link rel="stylesheet" href="/B42_WEB_003_Web-Wizards/css/footer.module.css"/>
     <link rel="stylesheet" href="/B42_WEB_003_Web-Wizards/admin/css/profile.css">
+    <!-- <link rel="stylesheet" href="/B42_WEB_003_Web-Wizards/css/navbar.module.css"> -->
 </head>
 <body>
   <!-- header  -->
@@ -74,7 +75,7 @@
         <i class="bx bx-chevron-down"></i>
       </div>
     </nav>
-</section>   
+
  
   <!-- profile container -->
     <div class="profile-container">
@@ -140,7 +141,7 @@
                 </div>
             </div>
         </div>
-        
+      </section>   
         <div class="form-actions">
             <button class="btn modify">Edit</button>
             <button class="btn update">Save</button>
