completed all the authentication part and fixed the navbar issue, checked all redirection codes, and payment and check out page for individual user

--- a/users/cartAndpayment/cartAndPayment.html
+++ b/users/cartAndpayment/cartAndPayment.html
@@ -185,6 +185,7 @@
         <input
           type="email"
           class="payment-input"
+          id="payment_email"
           placeholder="VogueCart@gmail.com"
           required
           autocomplete="none"
@@ -194,7 +195,7 @@
         <input
           class="payment-input"
           type="tel"
-          id="card-number"
+          id="payment_contant_number"
           placeholder="+(91) 9876543210"
           required
           autocomplete="none"
@@ -204,7 +205,7 @@
         <input
           class="payment-input"
           type="text"
-          id="name"
+          id="payment_address"
           placeholder="123, 4th Cross, 5th Main, Bangalore"
           required
           autocomplete="none"
@@ -214,7 +215,7 @@
         <input
           class="payment-input"
           type="text"
-          id="expiry"
+          id="payment_zipcode"
           placeholder="560001"
           required
           autocomplete="none"
