--- a/admin/products/product_table.html
+++ b/admin/products/product_table.html
@@ -13,6 +13,7 @@
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/css/font.module.css" />
     <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/admin/css/admin.navbar.module.css" />
+    
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                     <option value="20">20</option>
                     <option value="50">50</option>
                 </select>
-                <a href="products_form.html" class="add-product-btn">Add Product</a>
+                <a href="/B42_WEB_003_Web-Wizards/admin/products/products_form.html" class="add-product-btn">Add Product</a>
             </div>
         </div>
 
@@ -44,7 +45,8 @@
         <div id="pagination" class="pagination"></div>
     </div>
 
-    <script src="products_table1.js"></script>
+    
 </body>
 
 </html>
+<script src="B42_WEB_003_Web-Wizards/admin/products/products_table1.js"></script>
